--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "backend": "file:",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2"
